# mkbrr-wizard

./: .gitignore  .pre-commit-config.yaml  README.md  config.yaml  config.yaml.sample  find_disk_for_share.sh  hardlink_wizard.py  mkbrr-wizard.py  mkbrr_helper.py  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt  rip_renamer.py
.github/: copilot-instructions.md
.github/skills/interactive-flow-change-safely/: SKILL.md
.github/skills/mkbrr-flag-implementation/: SKILL.md
.github/skills/path-mapping-unraid-debug/: SKILL.md
.github/skills/single-file-test-first-fix/: SKILL.md
.github/skills/sync-mkbrr-docs-and-references/: SKILL.md
docs/: batch-mode.md  cli-reference-check-inspect.md  cli-reference-create.md  installation.md  presets.md
schema/: batch.json
scripts/: update-mkbrr-docs.sh
tests/: conftest.py  test_batch_mode.py  test_commands.py  test_commands_builder.py  test_config.py  test_hardlink_wizard.py  test_interactive.py  test_main_docker_flow.py  test_main_edge_cases.py  test_main_failures.py  test_main_flow.py  test_more_utils.py  test_notifications.py  test_path_conversion.py  test_permissions.py  test_presets.py  test_split_series.py  test_unraid.py  test_utils.py  test_workers.py
