[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "basic"
reportMissingImports = "warning"
reportUnknownParameterType = "none"
reportUnknownMemberType = "none"
reportUnknownVariableType = "none"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[project]
name = "mkbrr-wizard"
version = "0.0.1"
description = "Interactive CLI wizard for mkbrr with Rich UI support"
requires-python = ">=3.10"
dependencies = [
    "PyYAML>=6.0",
    "rich>=14.2.0",
]

[project.optional-dependencies]
ui = [
    "prompt_toolkit>=3.0.40",
]

dev = [
    "pytest>=7.2",
    "black>=23.5.0",
    "ruff>=0.14.0,<0.19.0",
    "isort>=5.12.0",
    "mypy>=0.942",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
